--- a/css/contact.css
+++ b/css/contact.css
@@ -3,13 +3,21 @@
 .ContactForm{
 wìdth: 100%;
 height: 100vh;
-background-image: linear-gradient(rgba(0, 0, 0, 0.7), #3551b5), url(assets/img/bg-contact.jpg);
-background-position: center;
-background-size: cover;
 display: flex;
 align-items: center;
 justify-content: center;
 }
+
+header.contact {
+  padding-top: 10rem;
+  padding-bottom: calc(10rem - 4.5rem);
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/bg-masthead.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+}
+
 
 form{
 width: 90%;
@@ -29,6 +37,7 @@ border: 1px solid #fff;
 color: #fff;
 background: transparent;
 font-size: 15px;
+border-radius: 0.375rem;
 }
 
 label{
@@ -51,6 +60,7 @@ background: transparent;
 border: 1px solid #fff;
 width: 100%;
 Cursor: pointer;
+border-radius: 3rem;
 }
 
 /*! Yo move label out */
@@ -60,12 +70,9 @@ textarea:focus~label,
 textarea:valid~label {
   top : -35px;
   font-size : 14px ; 
-} 
-.row { 
-display : flex;
-align-items: center;
-justify-content: space-between ; 
-} 
+}
+
+
 .Contactrow{
   display: flex;
   align-items: center;
