--- a/css/styles.css
+++ b/css/styles.css
@@ -1999,7 +1999,7 @@ progress {
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
-  background-color: #fff;
+  background-color: #d2b48c ;
   background-clip: padding-box;
   border: 1px solid #ced4da;
   -webkit-appearance: none;
