--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -280,7 +280,7 @@ section
 }
 .logo
 {
-	font-size: 36px;
+	font-size: 30px;
 	font-weight: 800;
 	color: #100f3a;
 	margin-right: 48px;
@@ -612,6 +612,7 @@ section
 	font-weight: 500;
 	color: #7a798c;
 	margin-top: 12px;
+	white-space: pre-wrap;
 }
 
 /*********************************
