Style for portafolio and more projects added

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -760,6 +760,16 @@ section
 	color: #FFFFFF;
 	line-height: 1.2;
 	margin-top: 30px;
+	text-align: center;
+}
+.portfolio_item_body
+{
+	font-size: 12px;
+	font-weight: 600;
+	color: #FFFFFF;
+	line-height: 1.2;
+	margin-top: 30px;
+	text-align: center;
 }
 .portfolio_item_link
 {
